Adjusted Kanban Lanes and Backgrounds to align correctly.

--- a/src/scss/Plugins/Community/kanban.scss
+++ b/src/scss/Plugins/Community/kanban.scss
@@ -12,7 +12,8 @@ div.kanban-plugin__ {
 		}
 
 		&-wrapper {
-			margin-right: 15px;
+			margin-right: 16px;
+			width: 248px !important;
 		}
 
 		&-title {
@@ -50,7 +51,7 @@ div.kanban-plugin__ {
 	}
 
 	&board > div {
-		padding: 15px;
+		padding: 16px;
 	}
 
 	&item {
@@ -244,8 +245,10 @@ div.kanban-plugin__ {
 	}
 }
 
-.pt-center-kanban-title-text .kanban-plugin__lane-title {
-	align-items: center;
+.pt-center-kanban-title-text {
+	.kanban-plugin__lane-title {
+		align-items: center;
+	}
 }
 
 .pt-disable-kanban-title-count div.kanban-plugin__lane-title-count {
@@ -301,7 +304,7 @@ div.kanban-plugin__lane-items > .kanban-plugin__placeholder:only-child {
 	.kanban-plugin__board {
 		background-image: radial-gradient(circle, var(--background-color-lt) 1px, rgb(0 0 0 / 0%) 1px);
 		background-attachment: local;
-		background-size: 7px 7px;
+		background-size: 8px 8px;
 	}
 }
 
@@ -309,7 +312,7 @@ div.kanban-plugin__lane-items > .kanban-plugin__placeholder:only-child {
 	.kanban-plugin__board {
 		background-image: radial-gradient(circle, var(--background-secondary) 1px, rgb(0 0 0 / 0%) 1px);
 		background-attachment: local;
-		background-size: 7px 7px;
+		background-size: 8px 8px;
 	}
 }
 
@@ -318,7 +321,7 @@ div.kanban-plugin__lane-items > .kanban-plugin__placeholder:only-child {
 	.kanban-plugin__board {
 		background-image: radial-gradient(circle, var(--interactive-accent-base) 1px, rgb(0 0 0 / 0%) 1px);
 		background-attachment: local;
-		background-size: 7px 7px;
+		background-size: 8px 8px;
 	}
 }
 
@@ -326,7 +329,7 @@ div.kanban-plugin__lane-items > .kanban-plugin__placeholder:only-child {
 	.kanban-plugin__board {
 		background-image: linear-gradient(to right, var(--background-color-lt) 1px, transparent 1px), linear-gradient(to bottom, var(--background-color-lt) 1px, transparent 1px);
 		background-attachment: local;
-		background-size: 7px 7px;
+		background-size: 8px 8px;
 	}
 }
 
@@ -334,7 +337,7 @@ div.kanban-plugin__lane-items > .kanban-plugin__placeholder:only-child {
 	.kanban-plugin__board {
 		background-image: linear-gradient(to right, var(--background-secondary) 1px, transparent 1px), linear-gradient(to bottom, var(--background-secondary) 1px, transparent 1px);
 		background-attachment: local;
-		background-size: 7px 7px;
+		background-size: 8px 8px;
 	}
 }
 
@@ -343,7 +346,7 @@ div.kanban-plugin__lane-items > .kanban-plugin__placeholder:only-child {
 	.kanban-plugin__board {
 		background-image: linear-gradient(to right, var(--interactive-accent-base) 1px, transparent 1px), linear-gradient(to bottom, var(--interactive-accent-base) 1px, transparent 1px);
 		background-attachment: local;
-		background-size: 7px 7px;
+		background-size: 8px 8px;
 	}
 }
 /* #endregion */
